@@ -1,3 +1,13 @@
+2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b8
+
+ * FIX: Reworked new_password.php
+
+ * Change: Reworked poll_results.php
+
+ * Change: Added check for correct comment Index when getting a comment.
+
+ * Change: CSS updates.
+
 2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b7
 
  * Fix: Copying a photo from a subalbum into the same album did not work.
